src/objects/PRM_PFAContract__c.object
<CustomObject>
    <fields>
        <fullName>PRM_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PRM_EmailSentDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>PRM_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PRM_FirstName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRM_LastName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>LastName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRM_NDASigned__c</fullName>
        <defaultValue>true</defaultValue>
        <label>NDA Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PRM_NokiaLegalContact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nokia Legal Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$User.NCP_Is_Internal__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>PFA_ContractsForLegal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRM_PFADocLink__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PFA Doc Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>PRM_PFADocPassword__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>PFA Doc Password</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PRM_PSMUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PSM</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.NCP_Is_Internal__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>PFA_Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PRM_PotentialPartnerCompanyName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Potential Partner Company Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PRM_SupportTicketNumber__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Support Ticket Number</label>
        <type>TextArea</type>
    </fields>
    <label>PFA Contract</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PFA-{0000}</displayFormat>
        <label>PFA Contract Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PFA Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>